--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -167,7 +167,7 @@
               
               <div class="col-md-2"></div>
 
-              <div class="col-md-3">
+              <!--<div class="col-md-3">
   
 
                 <div class="input-group has-validation">
@@ -203,7 +203,7 @@
                   </div>
                 </div>
 
-              <div class="col-md-1"></div>
+              <div class="col-md-1"></div>-->
 
 
           </div>
@@ -351,7 +351,7 @@
             </table>
           </div>
 
-          <div class="col-md-5">
+          <!--<div class="col-md-5">
             <div class="input-group has-validation">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
               <span class="input-group-text" id="add">Allergies</span>
@@ -371,7 +371,9 @@
                 </tr>
               </tbody>
             </table>
-          </div>
+          </div>-->
+
+          <button class="fs-5 btn btn-outline-info" (click)="getMedicalRecord()">View Medical Record <i class="bi bi-info-square-fill"></i></button>
 
 
           <div class="col-md-2"></div>
@@ -381,6 +383,63 @@
     </form>
   </div>
 </div>
+
+<div [ngStyle]="{'display': isModalOpen('ViewMedicalRecord') ? 'block' : 'none'}" id="ViewMedicalRecord"  class="modal">
+  <div class="modal-content">   
+    <span (click)="closeModal('ViewMedicalRecord')" class="close">&times;</span>     
+
+   
+    <div class="d-flex" style="gap: 20px;"> 
+
+ 
+      <div style="flex: 1; max-width: 50%; margin-left: 5cm;">
+        <div class="input-group">
+          <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
+          <span class="input-group-text" id="add">Allergies</span>
+        </div>
+        <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let request of allergiesList; let i = index" (click)="selectAllergie(request.id)" [ngClass]="{ 'selected-row': selectedAllergie === request.id }">
+              <td>{{ i + 1 }}</td>            
+              <td>{{ request }}</td>                 
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    
+      <div class="flex-fill">
+        <div class="input-group">
+          <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
+          <span class="input-group-text" id="add2">Medical Conditions</span>
+        </div>
+        <table class="table table-striped table-hover table-over">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Name</th>              
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let request of medicalConditions; let i = index" (click)="selectMedicalCondtion(request.id)" [ngClass]="{ 'selected-row': selectMedicalCondtion === request.id }">
+              <td>{{ i + 1 }}</td>           
+              <td>{{ request }}</td>               
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div> 
+
+  </div>
+</div>
+
 
 <div class="container-xxl">
   <button class="btn-right" (click)="logout()">Logout</button>
