--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -18,60 +18,31 @@
     </button>
     <div class="container">
 
-        <div class="table-wrapper">
-            <!-- Action Buttons Section -->
-            <div class="table-title">
-                <h2>Operation Requests</h2>
-                <div class="action-buttons">
-                    <button (click)="openModal('createRequestModal')">
-                        <i class="bi bi-plus"></i> Insert
-                    </button>
-                    <button (click)="openModal('filterRequestModal')">
-                        <i class="bi bi-filter"></i> Filter Requests
-                    </button>
-                </div>
-            </div>
-
-            <table class="table table-striped table-hover">
-                <thead>
-                  <tr>
-                    <th>Doctor Email</th>
-                    <th>Patient Email</th>
-                    <th>Operation Type</th>
-                    <th>Deadline</th>
-                    <th>Priority</th>
-                    <th>Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let request of filteredRequests">
-                    <td>{{ request.emailDoctor }}</td>
-                    <td>{{ request.emailPatient }}</td>
-                    <td>{{ request.operationTypeName }}</td>
-                    <td>{{ request.deadline | date:'mediumDate' }}</td>
-                    <td>{{ request.priority }}</td>
-                    <td>
-                      <button class="btn btn-warning" (click)="setUpdateRequest(request)">
-                        <i class="bi bi-pencil"></i>
-                      </button>
-                      <button class="btn btn-danger" (click)="openModal('deleteModal'); updateRequest.id = request.id;">
-                        <i class="bi bi-trash"></i>
-                      </button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-
         <div class="row g-3">
 
         <div class="container col-md-4">
-          <div class="container-lg  selectionDiv" (click)="openModal('listAllergies')">
+          <div class="container-lg  selectionDiv" (click)="openModal('createRequestModal')">
             <div class="form-floating mb-3">
-                <h3 class="title" >List Allergies</h3>
+                <h3 class="title" >Resgister Operation Request</h3>
             </div>
             </div>
           </div>
+
+          <div class="container col-md-4">
+            <div class="container-lg  selectionDiv" (click)="openModal('listOperationRequestModal')">
+              <div class="form-floating mb-3">
+                  <h3 class="title" >List Operation Requests</h3>
+              </div>
+              </div>
+            </div>
+
+          <div class="container col-md-4">
+            <div class="container-lg  selectionDiv" (click)="openModal('listAllergies')">
+              <div class="form-floating mb-3">
+                  <h3 class="title" >List Allergies</h3>
+              </div>
+              </div>
+            </div>
 
    <div class="container col-md-4">
       <div class="container-lg  selectionDiv" (click)="openModal('registerMedicalRecordModal')">
@@ -88,6 +59,57 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+
+<div  [ngStyle]="{'display': isModalOpen('listOperationRequestModal') ? 'block' : 'none'}" id="listOperationRequestModal" class="modal" >
+  <div class="modal-content">
+      <span (click)="closeModal('listOperationRequestModal')" class="close">&times;</span>
+      <div>
+        <div class="table-wrapper">
+          <!-- Action Buttons Section -->
+          <div class="table-title">
+              <h2>Operation Requests</h2>
+              <div class="action-buttons">
+                  <button (click)="openModal('filterRequestModal')">
+                      <i class="bi bi-filter"></i> Filter Requests
+                  </button>
+              </div>
+          </div>
+
+          <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>Doctor Email</th>
+                  <th>Patient Email</th>
+                  <th>Operation Type</th>
+                  <th>Deadline</th>
+                  <th>Priority</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let request of filteredRequests">
+                  <td>{{ request.emailDoctor }}</td>
+                  <td>{{ request.emailPatient }}</td>
+                  <td>{{ request.operationTypeName }}</td>
+                  <td>{{ request.deadline | date:'mediumDate' }}</td>
+                  <td>{{ request.priority }}</td>
+                  <td>
+                    <button class="btn btn-warning" (click)="setUpdateRequest(request)">
+                      <i class="bi bi-pencil"></i>
+                    </button>
+                    <button class="btn btn-danger" (click)="openModal('deleteModal'); updateRequest.id = request.id;">
+                      <i class="bi bi-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+      </div>
+      </div>
+
   </div>
 </div>
 
