--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -82,6 +82,22 @@
           </div>
         </div>
 
+        <div class="container col-md-4">
+          <div class="container-lg  selectionDiv" (click)="openModal('insertMedicalCondition')">
+            <div class="form-floating mb-3">
+                <h3 class="title" >Insert Medical Condition</h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="container col-md-4">
+          <div class="container-lg  selectionDiv" (click)="openModal('listSpecializationsModal')">
+            <div class="form-floating mb-3">
+                <h3 class="title" >List Specializations</h3>
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
@@ -1831,7 +1847,193 @@
   </div>
 </div>
 
+<div [ngStyle]="{'display': isModalOpen('insertMedicalCondition') ? 'block' : 'none'}" id="insertMedicalCondition" class="modal">
+  <div class="modal-content">
+      <span (click)="closeModal('insertMedicalCondition')" class="close">&times;</span>
+      <form [formGroup]="medicalConditionForm" (ngSubmit)="onInsertMedicalCondition()" class="row g-3 needs-validation" novalidate>
+         
+          <div class="col-md-6">
+            <label for="medicalConditionCode" class="form-label">Code</label>
+            <input type="text" class="form-control" id="medicalConditionCode" formControlName="codigo"   name="medicalConditionCode" required step="1" />
+         </div>
 
+          <div class="col-md-6">
+              <label for="medicalConditionDescription" class="form-label">Description</label>
+              <input type="text" class="form-control" id="medicalConditionDescription" formControlName="descricao"  name="medicalConditionDescription" required step="2" />
+          </div>
+
+          
+          <!-- Submit Button -->
+          <div class="col-12">
+              <button class="btn btn-primary" type="submit">Register Medical Condition</button>
+          </div>
+      </form>
+  </div>
+</div>
+
+
+<div [ngStyle]="{'display': isModalOpen('createOperationTypeModal') ? 'block' : 'none'}" id="createOperationTypeModal" class="modal">
+  <div class="modal-content">
+      <span (click)="closeModal('createOperationTypeModal')" class="close">&times;</span>
+      <form (ngSubmit)="onCreateOperationType(operationType)" class="row g-3 needs-validation" novalidate>
+          <h3 class="text-center">Insert New Operation Type</h3>
+
+          <!-- Operation Type Name -->
+          <div class="col-md-6">
+              <label for="name" class="form-label">Operation Type Name</label>
+              <input type="text" class="form-control" id="name" [(ngModel)]="operationType.name" name="name" required />
+              <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <!-- Required Staff -->
+          <div class="col-md-12">
+              <label for="requiredStaff" class="form-label">Required Staff</label>
+              <div *ngFor="let staff of operationType.requiredStaff; let i = index" class="staff-entry">
+                  <div class="d-flex mb-3">
+                      <!-- Quantity -->
+                      <div class="col-md-3">
+                        <label for="quantity_{{i}}" class="form-label">Quantity</label>
+                        <input type="number" [(ngModel)]="staff.quantity" name="quantity_{{i}}" class="form-control" placeholder="Quantity" required min="1" step="1" />
+                      </div>
+                      <!-- Specialization -->
+                      <div class="col-md-3">
+                        <label for="specialization_{{i}}" class="form-label">Specialization</label>
+                        <div class="input-group has-validation">
+                          <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
+                          <select class="form-select" [(ngModel)]="staff.specialization" name="specialization_{{i}}" required>
+                            <option value="" disabled selected hidden>Specialization</option>
+                            <option value="PEDIATRICS">Pediatrics</option>
+                            <option value="SURGERY">Surgery</option>
+                            <option value="CARDIOLOGY">Cardiology</option>
+                            <option value="ORTHOPEDICS">Orthopedics</option>
+                            <option value="ANAESTHESIOLOGY">Anaesthesiology</option>
+                            <option value="NEUROLOGY">Neurology</option>
+                            <option value="ONCOLOGY">Oncology</option>
+                            <option value="GYNECOLOGY">Gynecology</option>
+                            <option value="OBSTETRICS">Obstetrics</option>
+                            <option value="RADIOLOGY">Radiology</option>
+                            <option value="UROLOGY">Urology</option>
+                          </select>
+                          <div class="invalid-feedback">
+                            Please select a valid specialization.
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Role -->
+                      <div class="col-md-3">
+                        <label for="role_{{i}}" class="form-label">Role</label>
+                        <div class="input-group has-validation">
+                          <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
+                          <select class="form-select" [(ngModel)]="staff.role" name="role_{{i}}" required>
+                            <option value="" disabled selected hidden>Role</option>
+                            <option value="DOCTOR">Doctor</option>
+                            <option value="NURSE">Nurse</option>
+                            <option value="TECHNICIAN">Technician</option>
+                          </select>
+                          <div class="invalid-feedback">
+                            Please select a valid role.
+                          </div>
+                        </div>
+                      </div>
+                      <button type="button" class="btn btn-danger mt-4" (click)="removeStaff(i)">Remove</button>
+                    </div>
+              </div>
+              <button type="button" class="staff-entry" (click)="addStaff()">Add Staff</button>
+            </div>
+
+          <!-- Estimated Duration -->
+          <div class="col-md-6">
+              <label for="patientPreparation" class="form-label">Patient Preparation Time</label>
+              <input type="time" class="form-control" id="patientPreparation" [(ngModel)]="operationType.estimatedDuration.patientPreparation" name="patientPreparation" required step="2" />
+          </div>
+
+          <div class="col-md-6">
+              <label for="surgery" class="form-label">Surgery Time</label>
+              <input type="time" class="form-control" id="surgery" [(ngModel)]="operationType.estimatedDuration.surgery" name="surgery" required step="2" />
+          </div>
+
+          <div class="col-md-6">
+              <label for="cleaning" class="form-label">Cleaning Time</label>
+              <input type="time" class="form-control" id="cleaning" [(ngModel)]="operationType.estimatedDuration.cleaning" name="cleaning" required step="2" />
+          </div>
+
+          <!-- Submit Button -->
+          <div class="col-12">
+              <button class="btn btn-primary" type="submit">Create Operation Type</button>
+          </div>
+      </form>
+  </div>
+</div>
+
+
+
+
+<div  [ngStyle]="{'display': isModalOpen('listSpecializations') ? 'block' : 'none'}" id="listSpecializations" class="modal" >
+  <div class="modal-content">
+      <span (click)="closeModal('listSpecializations')" class="close">&times;</span>
+      <div>
+
+        <form  class="row g-3 needs-validation" novalidate="">
+          <div class="col-md-10"></div>
+
+          <div class="col-md-2">
+            <div class="input-group">
+            <span class="input-group-text" id="basic-addon1"><i class="bi bi-funnel-fill"></i></span><button class="btn btn-outline-info" (click)="openModal('listSpecializationsModal')"> Filter </button>
+          </div>
+        </div>
+
+
+
+          <div class="col-md-12">
+            <div class="table-wrapper" >
+              <div class="table-title">
+              <form (ngSubmit)="onSubmitSpecializations()" class="row g-3 needs-validation" novalidate="">
+              <table class="table table-striped table-hover table-over">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Specialization</th>
+                    <th>Prepatation Duration</th>
+                    <th>Surgery Duration</th>
+                    <th>Cleaning Duration</th>
+                    <th>Active</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let request of Specializations; let i = index" (click)="selectSpecializations(request.id)" [ngClass]="{ 'selected-row': selectSpecializationsId === request.id }">
+                    <td>{{ i + 1 }}</td>
+                    <td hidden><input class="selectRequest" type="radio" id="operationType_{{ request.id }}" name="SpecializationsFormID" value="{{ request.id }}" [checked]="selectSpecializationsId === request.id" hidden>{{ request.id }}</td>
+                    <td>{{ request.name }} </td>
+                    <td>{{ request.estimatedDuration.patientPreparation }}</td>
+                    <td>{{ request.estimatedDuration.surgery }}</td>
+                    <td>{{ request.estimatedDuration.cleaning }}</td>
+                    <td id="active_{{ request.id }}_{{request.active}}">
+                      <span *ngIf="request.active; else failure" class="badge rounded-pill bg-success">Yes</span>
+                      <ng-template #failure>
+                        <span class="badge rounded-pill bg-danger">No</span>
+                      </ng-template>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-9"></div>
+        <div class="col-md-3">
+          <!--<button class="fs-5 btn btn-outline-info" (click)="/*viewSpecializations()">View <i class="bi bi-info-square-fill"></i></button>
+          <button class="fs-5 btn btn-outline-warning" (click)="editSpecializations()">Edit <i class="bi bi-pencil-square"></i></button>
+          <button class="fs-5 btn btn-outline-danger" (click)="removeSpecializations()">Deactivate <i class="bi bi-archive-fill"></i></button>-->
+        </div>
+        </form>
+      </div>
+    </div>
+
+
+
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
